--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 		hola
 
+		que hace 
 		<nav class="navbar navbar-default">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
